[package]
name = "inari"
version = "0.12.0"
authors = ["Masashi Mizuno"]
edition = "2021"
description = "A Rust implementation of interval arithmetic"
documentation = "https://docs.rs/inari"
readme = "README.md"
repository = "https://github.com/unageek/inari"
license = "MIT"
keywords = ["arithmetic", "interval", "math", "numerics"]
categories = ["mathematics", "science"]
include = [
  "/.cargo/**",
  "/examples/**",
  "/src/**",
  "/tests/**",
  "/Cargo.toml",
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/rust-toolchain",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "src/_docs/header.html"]

[features]
default = ["gmp"]
gmp = ["gmp-mpfr-sys", "nom", "rug"]

[dependencies]
cfg-if = "1.0"
serde = { version = "1.0.0", features = ["derive"], optional = true }

[dependencies.gmp-mpfr-sys]
version = "1.4"
default-features = false
features = ["mpfr"]
optional = true

[dependencies.libm]
version = "0.2"
optional = true

[dependencies.nom]
version = "7.0"
default-features = false
features = ["std"]
optional = true

[dependencies.rug]
version = "1.11"
default-features = false
features = ["float", "integer", "rational"]
optional = true

[[example]]
name = "exp"
required-features = ["gmp", "libm"]

[[example]]
name = "log"
required-features = ["gmp", "libm"]

[[example]]
name = "parse"
required-features = ["gmp"]
