[package]
name = "inari"
version = "1.0.0"
authors = ["Masashi Mizuno"]
edition = "2021"
rust-version = "1.65.0"
description = "A Rust implementation of interval arithmetic"
documentation = "https://docs.rs/inari"
readme = "README.md"
repository = "https://github.com/unageek/inari"
license = "MIT"
keywords = ["arithmetic", "interval", "math", "numerics"]
categories = ["mathematics", "science"]
include = [
  "/.cargo/**",
  "/examples/**",
  "/src/**",
  "/tests/**",
  "/Cargo.toml",
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "src/_docs/header.html"]

[features]
default = ["gmp"]
gmp = ["gmp-mpfr-sys", "nom", "rug"]

[dependencies]
cfg-if = "1.0"
forward_ref = "1.0.0"

[dependencies.gmp-mpfr-sys]
version = "1.5"
default-features = false
features = ["mpfr"]
optional = true

[dependencies.libm]
version = "0.2"
optional = true

[dependencies.nom]
version = "7.0"
default-features = false
features = ["std"]
optional = true

[dependencies.rug]
version = "1.19"
default-features = false
features = ["float", "integer", "rational"]
optional = true

[[example]]
name = "exp"
required-features = ["gmp", "libm"]

[[example]]
name = "log"
required-features = ["gmp", "libm"]

[[example]]
name = "parse"
required-features = ["gmp"]
